--- a/renderer/styles/global.css
+++ b/renderer/styles/global.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 h1 {
     @apply text-2xl;
@@ -8,4 +9,8 @@ h1 {
 
 h2 {
     @apply text-xl;
+}
+
+.app-font { 
+    font-family: 'Lobster', cursive;
 }
